--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 		<title>The Utah Fiber Collective</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css?v=3" />
+		<link rel="stylesheet" href="assets/css/main.css?v=4" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -18,8 +18,8 @@
 						<a href="#offerings" class="icon solid fa-gifts"><span>Offerings</span></a>
 						<a href="#membership" class="icon solid fa-user-friends"><span>Membership</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://instagram.com/utahfibercollective/" class="icon brands fa-instagram"><span>Instagram</span></a>
-						<a href="https://etsy.com/shop/utahfibercollective/" class="icon brands fa-etsy"><span>Etsy</span></a>
+						<a href="https://instagram.com/utahfibercollective/" class="icon brands fa-instagram" target="_blank"><span>Instagram</span></a>
+						<a href="https://etsy.com/shop/utahfibercollective/" class="icon brands fa-etsy" target="_blank"><span>Etsy</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -36,7 +36,7 @@
 								</header>
 								<a href="#offerings" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/IMG_20200802_201845.jpg" alt="" />
 								</a>
 							</article>
 
@@ -64,6 +64,12 @@
 										</div>
 										<div class="col-6 col-12-small">
 											<span class="image fit"><img src="images/IMG_0260.jpg" alt=""></span>
+										</div>
+										<div class="col-6 col-12-small">
+											<span class="image fit"><img src="images/IMG_20200802_202357.jpg" alt=""></span>
+										</div>
+										<div class="col-6 col-12-small">
+											<span class="image fit"><img src="images/IMG_20200802_202638.jpg" alt=""></span>
 										</div>
 									</div>
 								</section>
